...
          }
        }
        TabView {
          SearchView(dataStore: dataStore)
            .tabItem {
              Image(systemName: "magnifyingglass")
              Text("Search")
            }
          SavedRecipiesView(dataStore: dataStore)
            .tabItem {
              Image(systemName: "house")
              Text("Home")
            }
          SettingsView(dataStore: dataStore, hideOnboarding: $hideOnboarding)
            .tabItem { Image(systemName: "gearshape.fill")
              Text("Settings")
            }
        }
...
