...
              }
            }
          } else {
            Text("No results for \(savedRecipieSearchText)")
          }
        }
        .searchable(text: $savedRecipieSearchText, prompt: "Type here to search")
      } else {
        Text("No Saved Recipes")
      }
    }
    .onAppear {
      if let data = UserDefaults.standard.data(forKey: "savedRecipies") {
...
